--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header h1 {
 
 }
 .userlogo{
-  height: 25px;
+  height: 30px;
   position: absolute;
   padding-bottom: 5px;
 }
@@ -60,9 +60,10 @@ section {
 }
 #searchInput {
   width: 60%;
-  padding: 10px;
+  height: 40px;
+  padding: 20px;
   margin-bottom: 25px;
-  border-radius: 6px;
+  border-radius: 19px;
   border: none;
   background-color: #1c242d;
   color: #e0e0e0;
@@ -109,7 +110,7 @@ button:hover {
 .about-content {
   margin: 0 auto;
   text-align: left; /* Aligns text left for better readability */
-  font-size: 24px;
+  font-size: 22px;
 }
 .about-content h3 {
   color: var(--accent);
@@ -303,7 +304,7 @@ h2 {
 .contact-title {
   text-align: center;
   font-size: 2.5em;
-  color: #2f855a;
+  color: #00c2a8;
   margin-bottom: 40px;
 }
 
@@ -317,7 +318,7 @@ h2 {
 }
 
 .contact-subtitle {
-  color: #2f855a;
+  color: #00c2a8;
   margin-bottom: 20px;
   font-size: 1.5em;
 }
@@ -341,7 +342,7 @@ h2 {
 
 .contact-form button {
   margin-top: 20px;
-  background-color: #2f855a;
+  background-color: #00c2a8;
   color: white;
   padding: 12px 24px;
   border: none;
